--- a/source/form.html
+++ b/source/form.html
@@ -14,12 +14,12 @@
 
   <body class="page-body page-body--inner">
     <header class="page-header page-header--inner">
-      <div class="page-header__top-bar top-bar">
+      <div class="page-header__top-bar top-bar top-bar--no-js">
         <a class="top-bar__logo logo" href="index.html" aria-label="Перейти на главную страницу">
           <img src="img/logo_mobile_blue.png" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
         </a>
 
-        <div class="top-bar__menu menu">
+        <div class="top-bar__menu menu menu--no-js">
           <button class="menu__toggle" type="button" aria-label="Показать меню навигации"></button>
 
           <nav class="menu__navigation navigation">
@@ -96,7 +96,7 @@
             </li>
           </ul>
 
-          <div class="menu__user-buttons user-buttons">
+          <div class="menu__user-buttons user-buttons user-buttons--inner">
             <a class="user-buttons__item user-buttons__item--phone" href="tel:88005558628" aria-label="Позвонить нам">
               <img class="user-buttons__icon" src="img/icons/icon_call.svg" width="18" height="18" alt="Иконка звонящей трубки">
             </a>
@@ -109,7 +109,7 @@
       </div>
     </header>
 
-    <main class="page-main page-main--inner">
+    <main class="page-main page-main--inner page-main--no-js">
       <div class="page-main__title-container">
         <h1 class="page-main__title page-main__title--main">Направления</h1>
       </div>
@@ -131,12 +131,12 @@
         <img class="user-profile__avatar" src="img/avatars/petya-demin.jpg" width="100" height="100" alt="Ваш аватар: бородатый мужчина в шапке и темных очках на фоне снега">
         <a class="user-profile__change-avatar button button--blue" href="blank.html"><span class="button__additional-text">Сменить </span>фото</a>
 
-        <div class="user-profile__tags info">
+        <div class="user-profile__tags info info--no-js">
           <h3 class="visually-hidden">Информация о вас</h3>
           <form class="info__form form" id="user-tags" method="POST" action="https://echo.htmlacademy.ru/">
             <fieldset class="form__fieldset">
               <legend class="form__legend">Тэги</legend>
-              <label class="form__label">
+              <label class="form__label form__label--container">
                 <textarea class="form__textarea" name="user-tags" placeholder="Коротко о себе в виде 5-8 хештэгов" aria-label="Коротко расскажите о себе с помощью 5-8 хештэгов">#бургер #бар #футбол #концерт #крафт</textarea>
               </label>
             </fieldset>
@@ -146,32 +146,32 @@
               <ul class="form__list form__list--row">
                 <li class="form__item">
                   <input class="visually-hidden form__checkbox" type="checkbox" name="transport-type" value="plane" id="transport-plane" checked>
-                  <label class="form__label form__label--plane" for="transport-plane">
+                  <label class="form__label form__label--container form__label--plane" for="transport-plane">
                     <span class="visually-hidden">Путешествия самолётом</span>
                   </label>
                 </li>
                 <li class="form__item">
                   <input class="visually-hidden form__checkbox" type="checkbox" name="transport-type" value="car" id="transport-car" checked>
-                  <label class="form__label form__label--car" for="transport-car">
+                  <label class="form__label form__label--container form__label--car" for="transport-car">
                     <span class="visually-hidden">Путешествия автотранспортом</span>
                   </label>
                 </li>
                 <li class="form__item">
                   <input class="visually-hidden form__checkbox" type="checkbox" name="transport-type" value="bicycle" id="transport-bicycle">
-                  <label class="form__label form__label--bicycle" for="transport-bicycle">
+                  <label class="form__label form__label--container form__label--bicycle" for="transport-bicycle">
                     <span class="visually-hidden">Путешествия на велосипеде</span>
                   </label>
                 </li>
                 <li class="form__item">
                   <input class="visually-hidden form__checkbox" type="checkbox" name="transport-type" value="afoot" id="transport-afoot" checked>
-                  <label class="form__label form__label--afoot" for="transport-afoot">
+                  <label class="form__label form__label--container form__label--afoot" for="transport-afoot">
                     <span class="visually-hidden">Путешествия пешком</span>
                   </label>
                 </li>
               </ul>
             </fieldset>
 
-            <button class="form__button form__button--hidden button button--blue" type="submit">Обновить профиль</button>
+            <button class="info__button form__button form__button--hidden button button--blue" type="submit">Обновить профиль</button>
           </form>
         </div>
       </section>
@@ -224,26 +224,30 @@
                 <legend class="visually-hidden">Попутчики</legend>
 
                 <label class="form__label" for="quantity-companions">Ищу попутчиков:</label>
-                <div class="form__input number-input">
-                  <button class="number-input__minus-button" type="button" aria-label="На одного попутчика меньше"></button>
+                <div class="form__input form__input--number number-input">
+                  <button class="number-input__button number-input__button--minus" type="button" aria-label="На одного попутчика меньше"></button>
                   <input class="number-input__input" type="number" name="quantity-companions" value="2" id="quantity-companions" min="1" step="1">
-                  <button class="number-input__plus-button" type="button" aria-label="На одного попутчика больше"></button>
+                  <button class="number-input__button number-input__button--plus" type="button" aria-label="На одного попутчика больше"></button>
                   <span class="number-input__units" aria-hidden="true">Чел.</span>
                 </div>
 
-                <input class="form__checkbox" type="checkbox" name="kids-ok" id="kids-ok" checked>
-                <label class="form__label form__label--small" for="kids-ok">Можно с детьми</label>
+                <div class="form__checkbox-kids">
+                  <input class="form__checkbox" type="checkbox" name="kids-ok" id="kids-ok" checked>
+                  <label class="form__label form__label--small" for="kids-ok">Можно с детьми</label>
+                </div>
               </fieldset>
 
               <fieldset class="form__fieldset form__fieldset--no-border step__fieldset">
                 <legend class="visually-hidden">Даты</legend>
 
-                <label class="form__label" for="quantity-days">Длительность:</label>
-                <div class="form__input number-input">
-                  <button class="number-input__minus-button" type="button" aria-label="На один день меньше"></button>
-                  <input class="number-input__input" type="number" name="quantity-days" value="3" id="quantity-days" min="1" step="1">
-                  <button class="number-input__plus-button" type="button" aria-label="На один день больше"></button>
-                  <span class="number-input__units" aria-hidden="true">Дн.</span>
+                <div class="form__input-days">
+                  <label class="form__label" for="quantity-days">Длительность:</label>
+                  <div class="form__input form__input--number number-input">
+                    <button class="number-input__button number-input__button--minus" type="button" aria-label="На один день меньше"></button>
+                    <input class="number-input__input" type="number" name="quantity-days" value="3" id="quantity-days" min="1" step="1">
+                    <button class="number-input__button number-input__button--plus" type="button" aria-label="На один день больше"></button>
+                    <span class="number-input__units" aria-hidden="true">Дн.</span>
+                  </div>
                 </div>
 
                 <div class="form__calendar calendar">
@@ -343,9 +347,9 @@
                   </li>
 
                   <li class="form__item select-country__item">
-                    <div class="select-country__controls">
+                    <div class="select-country__controls select-country__controls--active">
                       <button class="select-country__pick-button button button--select button--select-clicked" type="button">
-                        Выбрать страну
+                        Выберите страну
                       </button>
                       <span class="select-country__flag"></span>
                       <button class="select-country__deselect" type="button" aria-label="Убрать страну из списка"></button>
@@ -474,49 +478,58 @@
     </main>
 
     <footer class="page-footer">
-      <a class="page-footer__logo logo" href="index.html" aria-label="Перейти на главную страницу">
-        <img src="img/logo_mobile_blue.png" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
-      </a>
-
-      <ul class="page-footer__socials socials">
-        <li class="socials__item">
-          <a class="socials__link" href="#" target="_blank" aria-label="Перейти на страницу «Погнали» в Фейсбуке">
-            <svg width="14" height="28" viewBox="0 0 14 28" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
-              <path class="socials__icon"
-                d="M9.5 27.8H2.7v-13H0V8.6h2.6c-.2-3 .3-5 1.6-6.5a6.2 6.2 0 014.5-2h4.8v6.2H9.8c-.3.7-.3 1.5-.3 2.3h4v6.3h-4v13zm-5.3-1.6H8V13.4h4V10H8v-.8c0-2 0-3.7 1-4.4l.2-.1H12V1.5H8.8A4.7 4.7 0 005.3 3c-1 1.2-1.4 3.3-1.1 6.1v.9H1.6v3.3h2.7v13z"
-                fill="#192144" />
-            </svg>
-          </a>
-        </li>
-        <li class="socials__item">
-          <a class="socials__link" href="#" target="_blank" aria-label="Перейти на страницу «Погнали» в Вконтакте">
-            <svg width="31" height="16" viewBox="0 0 31 16" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
-              <path class="socials__icon"
-                d="M23.95 15.78a4.05 4.05 0 01-2.08-.63c-.65-.44-1.25-.96-1.78-1.53-.44-.44-1.17-1.18-1.45-1.18s-.48.92-.47 1.57c0 .45-.17.88-.47 1.2-.35.3-.78.47-1.22.5h-1.92a11.32 11.32 0 01-7.43-3C3.45 9.36.29 2.92.16 2.64A1.34 1.34 0 01.3 1.15c.38-.32.86-.5 1.36-.48h4.2c.33.05.66.17.95.35.27.18.49.43.63.73.43.92.92 1.81 1.48 2.67 1.3 2 1.89 2.46 2.1 2.56.23-.94.3-1.91.19-2.87A2.7 2.7 0 0011 2.83a1.33 1.33 0 00-.77-.3l-.73-.68C9.37 1.19 10.1.62 10.6.4a8.69 8.69 0 013.15-.38h.7c.73-.02 1.45.05 2.16.2 1.7.36 1.64 1.73 1.57 3.3 0 .47-.05 1-.05 1.63v.48c-.04.43-.01.87.09 1.3a9.1 9.1 0 002.07-2.48 20.4 20.4 0 001.52-2.8 1.58 1.58 0 011.6-.95h4.28a2 2 0 01.38 0c1 0 1.59.29 1.83.85s.17 1.66-2.36 4.6l-1 1.14c-.49.47-.9 1-1.24 1.59.37.43.8.81 1.28 1.14 1.15.86 2.16 1.9 3 3.07a1.6 1.6 0 01.26 1.68 2.3 2.3 0 01-1.88 1l-3.8.05-.22-.04zm-5.31-4.84c.9 0 1.68.79 2.5 1.62.45.49.96.92 1.5 1.3.42.27.9.42 1.4.42h.1l3.8-.05c.2-.01.38-.06.55-.14l-.1-.16a13.22 13.22 0 00-2.68-2.72c-1.2-1-1.8-1.47-1.87-2.24-.07-.77.49-1.44 1.6-2.71l1-1.11c.85-.86 1.54-1.86 2.06-2.95a5.66 5.66 0 00-.67 0h-4.37a.55.55 0 00-.24 0 20.5 20.5 0 01-1.65 3.05c-1.9 2.82-2.78 3.2-3.41 3.2-.2 0-.4-.05-.56-.14-1-.57-1-1.84-.94-2.76v-.43c0-.65 0-1.21.05-1.7.08-1.67 0-1.68-.38-1.77a8.56 8.56 0 00-1.86-.16h-.7a13 13 0 00-1.9.1c.1.07.19.15.26.25.4.65.61 1.4.59 2.18.13 1.65.06 3.8-1 4.32-.2.09-.4.13-.6.13-.93 0-1.85-.88-3.42-3.26-.6-.91-1.14-1.87-1.61-2.85L6 2.26c-.1-.05-.21-.1-.32-.11H1.62C2.2 3.37 5 8.77 8.14 11.6a10 10 0 006.42 2.63h1.85a1 1 0 00.27-.1v-.1c0-.26 0-2.6 1.58-3l.38-.1z"
-                fill="#192144" />
-            </svg>
-          </a>
-        </li>
-        <li class="socials__item">
-          <a class="socials__link" href="#" target="_blank" aria-label="Перейти на страницу «Погнали» в Инстаграме">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
-              <path class="socials__icon"
-                d="M17.28 2.4a4.33 4.33 0 014.32 4.32v10.56a4.33 4.33 0 01-4.32 4.32H6.72a4.33 4.33 0 01-4.31-4.32V6.72A4.33 4.33 0 016.72 2.4h10.56zm0-1.44H6.72A5.76 5.76 0 00.96 6.72v10.56a5.76 5.76 0 005.76 5.76h10.56a5.76 5.76 0 005.76-5.76V6.72A5.76 5.76 0 0017.28.96z"
-                fill="#192144" />
-              <path class="socials__icon"
-                d="M12.01 7.756a4.253 4.253 0 11-4.254 4.253 4.244 4.244 0 014.253-4.253zm0-1.44a5.693 5.693 0 105.682 5.693 5.681 5.681 0 00-5.683-5.693zM17.904 7.413a1.286 1.286 0 100-2.573 1.286 1.286 0 000 2.573z"
-                fill="#192144" />
-            </svg>
-          </a>
-        </li>
-      </ul>
-
-      <p class="page-footer__copyright copyright">
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" aria-label="Перейти на сайт HTML Academy">
-          <span class="copyright__text">Разработано</span>
-          <img src="img/htmlacademy.svg" width="27" height="33" alt="Логотип HTML Academy">
+      <div class="page-footer__wrapper wrapper">
+        <a class="page-footer__logo logo" href="index.html" aria-label="Перейти на главную страницу">
+          <img src="img/logo_mobile_blue.png" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
         </a>
-      </p>
+
+        <ul class="page-footer__socials socials">
+          <li class="socials__item">
+            <a class="socials__link socials__link--yellow-bg" href="#" target="_blank"
+              aria-label="Перейти на страницу «Погнали» в Фейсбуке">
+              <svg width="14" height="28" viewBox="0 0 14 28" fill="none" xmlns="http://www.w3.org/2000/svg" role="img"
+                aria-hidden="true" focusable="false">
+                <path class="socials__icon"
+                  d="M9.5 27.8H2.7v-13H0V8.6h2.6c-.2-3 .3-5 1.6-6.5a6.2 6.2 0 014.5-2h4.8v6.2H9.8c-.3.7-.3 1.5-.3 2.3h4v6.3h-4v13zm-5.3-1.6H8V13.4h4V10H8v-.8c0-2 0-3.7 1-4.4l.2-.1H12V1.5H8.8A4.7 4.7 0 005.3 3c-1 1.2-1.4 3.3-1.1 6.1v.9H1.6v3.3h2.7v13z"
+                  fill="#192144" />
+              </svg>
+            </a>
+          </li>
+          <li class="socials__item">
+            <a class="socials__link socials__link--yellow-bg" href="#" target="_blank"
+              aria-label="Перейти на страницу «Погнали» в Вконтакте">
+              <svg width="31" height="16" viewBox="0 0 31 16" fill="none" xmlns="http://www.w3.org/2000/svg" role="img"
+                aria-hidden="true" focusable="false">
+                <path class="socials__icon"
+                  d="M23.95 15.78a4.05 4.05 0 01-2.08-.63c-.65-.44-1.25-.96-1.78-1.53-.44-.44-1.17-1.18-1.45-1.18s-.48.92-.47 1.57c0 .45-.17.88-.47 1.2-.35.3-.78.47-1.22.5h-1.92a11.32 11.32 0 01-7.43-3C3.45 9.36.29 2.92.16 2.64A1.34 1.34 0 01.3 1.15c.38-.32.86-.5 1.36-.48h4.2c.33.05.66.17.95.35.27.18.49.43.63.73.43.92.92 1.81 1.48 2.67 1.3 2 1.89 2.46 2.1 2.56.23-.94.3-1.91.19-2.87A2.7 2.7 0 0011 2.83a1.33 1.33 0 00-.77-.3l-.73-.68C9.37 1.19 10.1.62 10.6.4a8.69 8.69 0 013.15-.38h.7c.73-.02 1.45.05 2.16.2 1.7.36 1.64 1.73 1.57 3.3 0 .47-.05 1-.05 1.63v.48c-.04.43-.01.87.09 1.3a9.1 9.1 0 002.07-2.48 20.4 20.4 0 001.52-2.8 1.58 1.58 0 011.6-.95h4.28a2 2 0 01.38 0c1 0 1.59.29 1.83.85s.17 1.66-2.36 4.6l-1 1.14c-.49.47-.9 1-1.24 1.59.37.43.8.81 1.28 1.14 1.15.86 2.16 1.9 3 3.07a1.6 1.6 0 01.26 1.68 2.3 2.3 0 01-1.88 1l-3.8.05-.22-.04zm-5.31-4.84c.9 0 1.68.79 2.5 1.62.45.49.96.92 1.5 1.3.42.27.9.42 1.4.42h.1l3.8-.05c.2-.01.38-.06.55-.14l-.1-.16a13.22 13.22 0 00-2.68-2.72c-1.2-1-1.8-1.47-1.87-2.24-.07-.77.49-1.44 1.6-2.71l1-1.11c.85-.86 1.54-1.86 2.06-2.95a5.66 5.66 0 00-.67 0h-4.37a.55.55 0 00-.24 0 20.5 20.5 0 01-1.65 3.05c-1.9 2.82-2.78 3.2-3.41 3.2-.2 0-.4-.05-.56-.14-1-.57-1-1.84-.94-2.76v-.43c0-.65 0-1.21.05-1.7.08-1.67 0-1.68-.38-1.77a8.56 8.56 0 00-1.86-.16h-.7a13 13 0 00-1.9.1c.1.07.19.15.26.25.4.65.61 1.4.59 2.18.13 1.65.06 3.8-1 4.32-.2.09-.4.13-.6.13-.93 0-1.85-.88-3.42-3.26-.6-.91-1.14-1.87-1.61-2.85L6 2.26c-.1-.05-.21-.1-.32-.11H1.62C2.2 3.37 5 8.77 8.14 11.6a10 10 0 006.42 2.63h1.85a1 1 0 00.27-.1v-.1c0-.26 0-2.6 1.58-3l.38-.1z"
+                  fill="#192144" />
+              </svg>
+            </a>
+          </li>
+          <li class="socials__item">
+            <a class="socials__link socials__link--yellow-bg" href="#" target="_blank"
+              aria-label="Перейти на страницу «Погнали» в Инстаграме">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" role="img"
+                aria-hidden="true" focusable="false">
+                <path class="socials__icon"
+                  d="M17.28 2.4a4.33 4.33 0 014.32 4.32v10.56a4.33 4.33 0 01-4.32 4.32H6.72a4.33 4.33 0 01-4.31-4.32V6.72A4.33 4.33 0 016.72 2.4h10.56zm0-1.44H6.72A5.76 5.76 0 00.96 6.72v10.56a5.76 5.76 0 005.76 5.76h10.56a5.76 5.76 0 005.76-5.76V6.72A5.76 5.76 0 0017.28.96z"
+                  fill="#192144" />
+                <path class="socials__icon"
+                  d="M12.01 7.756a4.253 4.253 0 11-4.254 4.253 4.244 4.244 0 014.253-4.253zm0-1.44a5.693 5.693 0 105.682 5.693 5.681 5.681 0 00-5.683-5.693zM17.904 7.413a1.286 1.286 0 100-2.573 1.286 1.286 0 000 2.573z"
+                  fill="#192144" />
+              </svg>
+            </a>
+          </li>
+        </ul>
+
+        <p class="page-footer__copyright copyright">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank"
+            aria-label="Перейти на сайт HTML Academy">
+            <span class="copyright__text">Разработано</span>
+            <img src="img/htmlacademy.svg" width="27" height="33" alt="Логотип HTML Academy">
+          </a>
+        </p>
+      </div>
     </footer>
   </body>
 </html>
